--- a/hr_hospital/views/personal_doctor_history_views.xml
+++ b/hr_hospital/views/personal_doctor_history_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="personal_doctor_history_view_tree" model="ir.ui.view">
         <field name="name">personal.doctor.history.view.tree</field>
-        <field name="model">hr.hospital.personal.doctor.history</field>
+        <field name="model">hr_hospital.personal.doctor.history</field>
         <field name="arch" type="xml">
             <tree string="History of personal doctors">
                 <field name="patient_id"/>
@@ -13,7 +13,7 @@
     </record>
     <record id="personal_doctor_history_view_form" model="ir.ui.view">
         <field name="name">personal.doctor.history.view.form</field>
-        <field name="model">hr.hospital.personal.doctor.history</field>
+        <field name="model">hr_hospital.personal.doctor.history</field>
         <field name="arch" type="xml">
             <form string="History of personal doctors">
                 <sheet>
@@ -28,7 +28,7 @@
     </record>
     <record id="personal_doctor_history_action" model="ir.actions.act_window">
         <field name="name">Personal doctor history</field>
-        <field name="res_model">hr.hospital.personal.doctor.history</field>
+        <field name="res_model">hr_hospital.personal.doctor.history</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
