--- a/hr_hospital/views/diagnosis_views.xml
+++ b/hr_hospital/views/diagnosis_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="diagnosis_view_tree" model="ir.ui.view">
         <field name="name">diagnosis.view.tree</field>
-        <field name="model">hr.hospital.diagnosis</field>
+        <field name="model">hr_hospital.diagnosis</field>
         <field name="arch" type="xml">
             <tree string="Diagnosis">
                 <field name="name"/>
@@ -15,7 +15,7 @@
     </record>
     <record id="diagnosis_view_form" model="ir.ui.view">
         <field name="name">diagnosis.view.form</field>
-        <field name="model">hr.hospital.diagnosis</field>
+        <field name="model">hr_hospital.diagnosis</field>
         <field name="arch" type="xml">
             <form string="Diagnosis">
                 <sheet>
@@ -40,7 +40,7 @@
     <!-- actions opening views on models -->
     <record id="diagnosis_action" model="ir.actions.act_window">
         <field name="name">Diagnosis</field>
-        <field name="res_model">hr.hospital.diagnosis</field>
+        <field name="res_model">hr_hospital.diagnosis</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
