--- a/hr_hospital/views/disease_type_views.xml
+++ b/hr_hospital/views/disease_type_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="disease_type_view_tree" model="ir.ui.view">
         <field name="name">disease.type.view.tree</field>
-        <field name="model">hr.hospital.disease.type</field>
+        <field name="model">hr_hospital.disease.type</field>
         <field name="arch" type="xml">
             <tree string="Types of disease">
                 <field name="name"/>
@@ -12,7 +12,7 @@
     </record>
     <record id="disease_type_view_form" model="ir.ui.view">
         <field name="name">disease.type.view.form</field>
-        <field name="model">hr.hospital.disease.type</field>
+        <field name="model">hr_hospital.disease.type</field>
         <field name="arch" type="xml">
             <form string="Type of disease">
                 <sheet>
@@ -26,7 +26,7 @@
     </record>
     <record id="disease_type_action" model="ir.actions.act_window">
         <field name="name">Types of disease</field>
-        <field name="res_model">hr.hospital.disease.type</field>
+        <field name="res_model">hr_hospital.disease.type</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
