--- a/hr_hospital/views/disease_views.xml
+++ b/hr_hospital/views/disease_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="disease_view_tree" model="ir.ui.view">
         <field name="name">disease.view.tree</field>
-        <field name="model">hr.hospital.disease</field>
+        <field name="model">hr_hospital.disease</field>
         <field name="arch" type="xml">
             <tree string="Diseases">
                 <field name="name"/>
@@ -12,7 +12,7 @@
     </record>
     <record id="disease_view_form" model="ir.ui.view">
         <field name="name">disease.view.form</field>
-        <field name="model">hr.hospital.disease</field>
+        <field name="model">hr_hospital.disease</field>
         <field name="arch" type="xml">
             <form string="Disease">
                 <sheet>
@@ -31,7 +31,7 @@
     </record>
     <record id="disease_action" model="ir.actions.act_window">
         <field name="name">Diseases</field>
-        <field name="res_model">hr.hospital.disease</field>
+        <field name="res_model">hr_hospital.disease</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
