--- a/hr_hospital/views/patient_study_views.xml
+++ b/hr_hospital/views/patient_study_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="patient_study_view_tree" model="ir.ui.view">
         <field name="name">patient.study.view.tree</field>
-        <field name="model">hr.hospital.patient.study</field>
+        <field name="model">hr_hospital.patient.study</field>
         <field name="arch" type="xml">
             <tree string="Patient studies">
                 <field name="name"/>
@@ -15,7 +15,7 @@
     </record>
     <record id="patient_study_view_form" model="ir.ui.view">
         <field name="name">patient.study.view.form</field>
-        <field name="model">hr.hospital.patient.study</field>
+        <field name="model">hr_hospital.patient.study</field>
         <field name="arch" type="xml">
             <form string="Patient study">
                 <sheet>
@@ -37,7 +37,7 @@
     </record>
     <record id="patient_study_action" model="ir.actions.act_window">
         <field name="name">Patient Study</field>
-        <field name="res_model">hr.hospital.patient.study</field>
+        <field name="res_model">hr_hospital.patient.study</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
