--- a/hr_hospital/views/patient_views.xml
+++ b/hr_hospital/views/patient_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="patient_view_tree" model="ir.ui.view">
         <field name="name">view.patient.form.tree</field>
-        <field name="model">hr.hospital.patient</field>
+        <field name="model">hr_hospital.patient</field>
         <field name="arch" type="xml">
             <tree string="Patients">
                 <field name="last_name"/>
@@ -15,7 +15,7 @@
     </record>
     <record id="patient_view_form" model="ir.ui.view">
         <field name="name">view.patient.form</field>
-        <field name="model">hr.hospital.patient</field>
+        <field name="model">hr_hospital.patient</field>
         <field name="arch" type="xml">
             <form string="Patient">
                 <sheet>
@@ -44,7 +44,7 @@
     </record>
     <record id="patient_action" model="ir.actions.act_window">
         <field name="name">Patients</field>
-        <field name="res_model">hr.hospital.patient</field>
+        <field name="res_model">hr_hospital.patient</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
