--- a/hr_hospital/views/study_type_views.xml
+++ b/hr_hospital/views/study_type_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="study_type_view_tree" model="ir.ui.view">
         <field name="name">study.type.view.tree</field>
-        <field name="model">hr.hospital.study.type</field>
+        <field name="model">hr_hospital.study.type</field>
         <field name="arch" type="xml">
             <tree string="Types of study">
                 <field name="name"/>
@@ -12,7 +12,7 @@
     </record>
     <record id="study_type_view_form" model="ir.ui.view">
         <field name="name">study.type.view.form</field>
-        <field name="model">hr.hospital.study.type</field>
+        <field name="model">hr_hospital.study.type</field>
         <field name="arch" type="xml">
             <form string="Type of study">
                 <sheet>
@@ -29,7 +29,7 @@
     </record>
     <record id="study_type_action" model="ir.actions.act_window">
         <field name="name">Study type</field>
-        <field name="res_model">hr.hospital.study.type</field>
+        <field name="res_model">hr_hospital.study.type</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
