--- a/hr_hospital/views/visit_views.xml
+++ b/hr_hospital/views/visit_views.xml
@@ -2,7 +2,7 @@
 <odoo>
     <record id="visit_view_tree" model="ir.ui.view">
         <field name="name">visit.view.tree</field>
-        <field name="model">hr.hospital.visit</field>
+        <field name="model">hr_hospital.visit</field>
         <field name="arch" type="xml">
             <tree string="Visits">
                 <field name="patient_id"/>
@@ -14,7 +14,7 @@
     </record>
     <record id="visit_view_form" model="ir.ui.view">
         <field name="name">visit.view.form</field>
-        <field name="model">hr.hospital.visit</field>
+        <field name="model">hr_hospital.visit</field>
         <field name="arch" type="xml">
             <form string="Visit">
                 <sheet>
@@ -33,7 +33,7 @@
     </record>
     <record id="visit_action" model="ir.actions.act_window">
         <field name="name">Patient visits</field>
-        <field name="res_model">hr.hospital.visit</field>
+        <field name="res_model">hr_hospital.visit</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[]</field>
         <field name="context">{}</field>
